Changes to be committed: 	modified:   reptile.ipynb

--- a/reptile.ipynb
+++ b/reptile.ipynb
@@ -1942,28 +1942,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 70,
    "source": [
-    "for d in soup.find_all('div', class_=\"release_movie_name\"):\n",
+    "def find_href():\n",
+    "    href=[]\n",
+    "    for d in soup.find_all('div', class_=\"release_movie_name\"):\n",
     "#     print(d.find('a', class_='gabtn').text)\n",
     "#     print(d.find('a', class_='gabtn').text.replace(' ', '').replace('\\n', ''))\n",
-    "    print(d.find('a', class_='gabtn')['href'])"
+    "        href.append(d.find('a', class_='gabtn')['href'])\n",
+    "    \n",
+    "    # print(href)\n",
+    "    so= ''\n",
+    "    for a in href:\n",
+    "        url=a\n",
+    "        r = requests.get(url)\n",
+    "        so = BeautifulSoup(r.text)\n",
+    "\n",
+    "        print(so.find('h1').text.strip())\n",
+    "        print(so.find('h3').text.strip())\n",
+    "        \n",
+    "        for c in so.find_all('div', class_=\"level_name_box\"):\n",
+    "            for d in c.find_all('div', class_=\"level_name\"):\n",
+    "                print(d.find('a',class_='gabtn').text.strip())\n",
+    "        print('---------------------------')\n",
+    "    \n",
+    "\n",
+    "\n",
+    "find_href()\n"
    ],
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "https://movies.yahoo.com.tw/movieinfo_main/%E5%8F%A2%E6%9E%97%E5%A5%87%E8%88%AA-jungle-cruise-10315\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/LIP-X-LIP%E4%BA%AB%E5%8F%97%E9%80%99%E4%B8%96%E7%95%8C%E7%9A%84%E6%96%B9%E6%B3%95-lip-x-lip-film-x-live-11364\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E5%B0%8F%E7%8E%8B%E5%AD%90%E5%85%AC%E4%B8%BB%E5%BF%83-petite-fille-11389\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E6%B7%98%E5%AF%B6%E5%B0%91%E5%B9%B4-sun-children-11396\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E8%A9%AD%E8%80%81-old-11409\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E7%BD%AA%E4%B9%8B%E8%81%B2-the-voice-of-sin-11420\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E7%A0%B4%E7%A2%8E%E7%9A%84%E7%9E%AC%E9%96%93-my-blood-bones-in-a-flowing-galaxy-11421\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E7%90%86%E9%AB%AE%E5%B8%AB%E7%9A%84%E7%94%B7%E4%BA%BA-%E7%B6%93%E5%85%B8%E6%95%B8%E4%BD%8D%E4%BF%AE%E5%BE%A9-the-hairdressers-husband-11429\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E9%99%A4%E6%9A%B4-caught-in-time-11431\n",
-      "https://movies.yahoo.com.tw/movieinfo_main/%E5%A4%AA%E9%99%BD%E5%87%BA%E4%BE%86%E4%B9%8B%E5%BE%8C-under-the-open-sky-11435\n"
+      "叢林奇航\n",
+      "Jungle Cruise\n",
+      "動作\n",
+      "冒險\n",
+      "奇幻\n",
+      "---------------------------\n",
+      "LIP X LIP享受這世界的方法\n",
+      "LIP X LIP FILM X LIVE\n",
+      "動畫\n",
+      "---------------------------\n",
+      "小王子公主心\n",
+      "Petite Fille\n",
+      "紀錄片\n",
+      "---------------------------\n",
+      "淘寶少年\n",
+      "Sun Children\n",
+      "劇情\n",
+      "---------------------------\n",
+      "詭老\n",
+      "Old\n",
+      "懸疑/驚悚\n",
+      "---------------------------\n",
+      "罪之聲\n",
+      "The Voice of Sin\n",
+      "劇情\n",
+      "懸疑/驚悚\n",
+      "---------------------------\n",
+      "破碎的瞬間\n",
+      "My Blood & Bones in a flowing Galaxy\n",
+      "奇幻\n",
+      "劇情\n",
+      "懸疑/驚悚\n",
+      "---------------------------\n",
+      "理髮師的男人 經典數位修復\n",
+      "The Hairdresser's Husband\n",
+      "愛情\n",
+      "---------------------------\n",
+      "除暴\n",
+      "Caught In Time\n",
+      "動作\n",
+      "犯罪\n",
+      "---------------------------\n",
+      "太陽出來之後\n",
+      "Under the Open Sky\n",
+      "劇情\n",
+      "---------------------------\n"
      ]
     }
    ],
