Changes to be committed: 	modified:   reptile.ipynb

--- a/reptile.ipynb
+++ b/reptile.ipynb
@@ -2,11 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 123,
    "source": [
     "import requests\n",
     "import json\n",
-    "from bs4 import BeautifulSoup"
+    "from bs4 import BeautifulSoup\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
    "metadata": {}
@@ -1945,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 129,
    "source": [
     "def find_href():\n",
     "    href=[]\n",
@@ -1955,23 +1957,34 @@
     "        href.append(d.find('a', class_='gabtn')['href'])\n",
     "    \n",
     "    # print(href)\n",
+    "    lista = []\n",
     "    so= ''\n",
     "    for a in href:\n",
     "        url=a\n",
     "        r = requests.get(url)\n",
     "        so = BeautifulSoup(r.text)\n",
     "\n",
-    "        print(so.find('h1').text.strip())\n",
-    "        print(so.find('h3').text.strip())\n",
+    "        name_ch=so.find('h1').text.strip()\n",
+    "        name_en=so.find('h3').text.strip()\n",
     "        # print(so.find('span').text)\n",
-    "        print(so.find('div',class_= 'movie_intro_info_r').find('span').text.split('上映日期：')[1])\n",
-    "        \n",
+    "        date=so.find('div',class_= 'movie_intro_info_r').find('span').text.split('上映日期：')[1]\n",
+    "\n",
+    "        types=''\n",
     "        for c in so.find_all('div', class_=\"level_name_box\"):\n",
     "            for d in c.find_all('div', class_=\"level_name\"):\n",
-    "                print(d.find('a',class_='gabtn').text.strip())\n",
+    "                types+=d.find('a',class_='gabtn').text.strip()\n",
     "\n",
-    "        print(so.find('div',class_='gray_infobox_inner').find('span').text)\n",
-    "        print('---------------------------')\n",
+    "\n",
+    "        article=so.find('div',class_='gray_infobox_inner').find('span').text.strip()\n",
+    "\n",
+    "        ind=(name_ch,name_en,date,types,article)\n",
+    "        lista.append(ind)\n",
+    "\n",
+    "\n",
+    "    df = pd.DataFrame(lista, columns = [\"中文名稱\", \"英文名稱\",'上映日期','類型','簡介',])\n",
+    "    # df.to_csv('movies.csv')\n",
+    "    return(df)\n",
+    "    # print(lista)\n",
     "    \n",
     "\n",
     "\n",
@@ -1979,187 +1992,147 @@
    ],
    "outputs": [
     {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "叢林奇航\n",
-      "Jungle Cruise\n",
-      "2021-07-30\n",
-      "動作\n",
-      "冒險\n",
-      "奇幻\n",
-      "\n",
-      "            故事描述一位名叫霍頓博士（艾蜜莉布朗 飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻之樹，而要取得這棵樹的神力，必須帶著一個被人類收藏的「神奇箭頭」來解開它，霍頓博士決定要深入叢林，來一探這個傳說的究竟，她找來了一個看似可靠，但其實是個只想詐騙遊客的狡猾渡輪船長—法蘭克船長（巨石強森 飾演），她雇用法蘭克載著自己與弟弟（傑克懷特霍爾 飾演）前往叢林展開這場解開神秘傳說之謎的旅程。\n",
-      " \n",
-      "迪士尼樂園最受歡迎的人氣遊樂設施「叢林奇航」首度改編成電影，將在2020年暑假搬上大銀幕了！這趟神秘的叢林之旅，要帶著大家進入一趟最驚險刺激的旅程，過程中將會遇上許多危險恐怖的生物，以及奇異的超自然現象，新作融合《國家寶藏》般的驚險探險劇情，加上《神鬼奇航》般的冒險旅程！\n",
-      "          \n",
-      "---------------------------\n",
-      "LIP X LIP享受這世界的方法\n",
-      "LIP X LIP FILM X LIVE\n",
-      "2021-07-30\n",
-      "動畫\n",
-      "\n",
-      "★日本百萬訂閱品牌VOCALOID樂團HoneyWorks 10週年特別企劃，偶像團體組合「LIP X LIP」成團歷程首度公開！另一組偶像雙人團體「ASCANA（あすかな）」更驚喜助陣\n",
-      "★動畫電影X虛擬演唱會全新視聽饗宴一次滿足，讓樂迷大呼過癮，引爆粉絲最高討論度！\n",
-      "★《從好久以前就喜歡你》、《名偵探柯南》系列團隊全新製作音樂性動畫，BL臉紅指數直逼《GIVEN ~ 被贈與的未來 劇場版》，絕對讓宅男腐女砰然心動\n",
-      "★《神劍闖江湖》系列導演 室井富美江X《從好久以前就喜歡你。～告白實行委員會～》編劇 成田良美X《名偵探柯南》系列人物設計 大島美和，聯手打破真人與虛擬隔閡的「新世代偶像電影」\n",
-      "★內山昂輝、島崎信長等夢幻聲優卡司，默契配音演繹男子偶像團體經典！關西傑尼斯Jr.-浪花男子的藤原丈一郎、大橋和也出聲力挺\n",
-      " \n",
-      "夢想受挫的他，和生活無依的他，邂逅踏上成為偶像的旅程…\n",
-      " \n",
-      "兩名男子高中生組成名為「LIP x LIP」的偶像團體，這是他們首度公開的創團歷程。拼命練習的勇次郎夢想有天能站上歌舞伎的舞台。但當他沒被選為歌舞伎繼承者時，他的夢想突然幻滅。愛藏則是只想唱歌，卻跟著母親與哥哥過著漫無目的的挫折生活。因為偶然契機，同樣進入偶像甄選會後相遇的兩人，一開始就因為一點小事而爭吵，沒想到兩人卻在甄選會脫穎而出。正當他們雀躍不已時，唱片公司社長田村竟提出一個意外的條件：「你們兩個要以雙人團體的身分出道」。於是，水火不容的兩人便踏上成為偶像的旅程。\n",
-      " \n",
-      "《LIP X LIP享受這世界的方法》是在Youtube擁有170萬人訂閱的品牌HoneyWorks 10週年特別企劃，首度公開了旗下偶像團體組合「LIP X LIP」成團歷程。這次不僅是一部動畫電影，還在片尾加上長達近30分鐘的虛擬演唱會，全新視聽饗宴讓樂迷大呼過癮，在日本上映時即引爆粉絲超高討論度。這次電影是由《從好久以前就喜歡你》、《名偵探柯南》系列團隊全新製作，片中團體成員勇次郎和愛藏朝夕相處，BL臉紅指數直逼《GIVEN ~ 被贈與的未來 劇場版》，絕對讓宅男腐女砰然心動。幕後團隊更是大有來頭，包含《神劍闖江湖》系列導演 室井富美江、《從好久以前就喜歡你。～告白實行委員會～》編劇 成田良美、《名偵探柯南》系列人物設計 大島美和，以及替「LIP x LIP」成員配音的人氣聲優內山昂輝、島崎信長，還有配音另一組偶像雙人團體「ASCANA（あすかな）」的關西傑尼斯Jr.-浪花男子的藤原丈一郎、大橋和也也出聲力挺，集體聯手呈現出打破真人與虛擬之間隔閡的「新世代偶像電影」，今年5月準備好參與這場初夏的電影與音樂交織的盛會吧！\n",
-      "\n",
-      "---------------------------\n",
-      "小王子公主心\n",
-      "Petite Fille\n",
-      "2021-07-30\n",
-      "紀錄片\n",
-      "\n",
-      "            ★ 4座最佳紀錄片獎得主   千萬觀眾感動淚推，動人鉅獻！\n",
-      "★ 紀錄人類幼小心靈的掙扎與歡笑   關於愛與勇氣的真實故事！\n",
-      "★ 坎城酷兒金棕櫚、柏林泰迪熊、法國凱薩獎名導 薩巴斯汀李席茲 作品\n",
-      " \n",
-      "每個人都會被觸動的內在靈魂\n",
-      "關於愛與勇氣的真實故事\n",
-      " \n",
-      "四歲的兒子有一天對母親說：「長大後，我想當女孩。」媽媽起初以為是鬧著玩，但他的淚水與自白觸動母親的心，不得不正視這個誤裝在男孩身體裡的公主心。電影捕捉小女孩莎夏一家人的生活，從父母手足的心境轉變，醫生與心理輔導角度，觀眾看著莎夏試圖融入學校、在同儕中尋求認同，陪她開心、落淚，用溫柔的韌性面對異樣的眼光。鍾愛粉紅色的她，最終會不會穿上那套藍色的衣服，能不能夠得到她最想要的芭蕾舞裙？\n",
-      " \n",
-      "《小王子公主心》是關於「身為一個與眾不同孩子」的故事，當一個人必須超越社會規範而生活、成長，會是什麼樣貌，而不管是盟友或是敵人，我們是否能透過愛與勇氣，讓世界從此不同？\n",
-      " \n",
-      "          \n",
-      "---------------------------\n",
-      "淘寶少年\n",
-      "Sun Children\n",
-      "2021-07-30\n",
-      "劇情\n",
-      "\n",
-      "            ★入選 威尼斯影展競賽片最佳影片\n",
-      "★榮獲 威尼斯影展最佳新演員獎\n",
-      "★2021 奧斯卡最佳國際影片伊朗代表 入選十五強\n",
-      " \n",
-      "阿里是一個在街頭求生存的少年，雖然年僅12歲的小小年紀卻是一個經驗老到的小混混，在處處是危機也處處是黃金的大城市，冒著被警察逮到的危險偷拐搶騙、變賣贓物，只求能賺得一些小錢維持溫飽來養活自己和家人。突然有一天他被抓去見一位地方上頗有勢力的老大，老大吩咐他混進一所學校，但上課不是他真正的目的，重要的是他要在學校挖掘地道，因為下面藏匿著不為人知的寶藏！\n",
-      " \n",
-      "阿里對這個地下寶藏充滿了各種想像，不管是黃金還是珠寶，他相信這份寶藏一定能為他帶來一大筆財富。一心想要賺到大筆財富的阿里，找來和他一起在街頭打拼的死黨，他們絕對是完成這個「尋寶計畫」最佳搭擋。當他們順理成章進入這所專為流落街頭、無法接受正規教育的孩童所創立的學校之後，他們在課堂與地道之間徘徊，還要跟老師們捉迷藏，只希望最終能挖到寶藏，替自己找到一條脫離貧困的生路。\n",
-      " \n",
-      "【關於電影】\n",
-      " \n",
-      "導演馬吉德借《淘寶少年》盼喚醒人們重視  全球1.5億孩童教育權\n",
-      "代表伊朗進入奧斯卡最佳國際影片15強  威尼斯影展最佳新演員等獎項\n",
-      "截至目前為止全球約有1.5億的孩子們為了維持生計而不得不放棄受教機會，《淘寶少年》就是一部聚焦於這些深陷困境的童工們的電影。即使有許多國際組織正為這個議題努力不懈，但仍然不敵嚴酷的現實狀況，還是有許多受教權被剝奪的孩子亟待協助。導演馬吉德．馬吉迪的靈感來自於一間位於德黑蘭專為童工所設置的特別學校，和一個希望脫貧的孩童夢想，因此拍攝了《淘寶少年》，他更期盼這部電影可以喚醒更多人關注他們的未來。\n",
-      "然而，比起一部深切探討童工受教權的嚴肅說教電影，導演其實更想要拍出一部有娛樂性、能量滿滿的作品，因此利用「挖寶藏」的冒險行動帶入更多緊張刺激的元素，讓全世界看到其實這些孩子們是非常機智、敏銳且擅於觀察的。導演也成功地將這一部作品帶上國際影展的舞台，不僅入選威尼斯影展最佳影片，同時也獲得Lanterna Magica Award大獎和最佳新演員獎，更代表伊朗進入奧斯卡最佳國際影片最後15強。\n",
-      " \n",
-      "最擅長拍攝年輕演員的導演馬吉迪  從孩子身上看到最純粹光芒\n",
-      "歷經4個月從三千名孩童中海選角色 剔除每一個人都是煎熬\n",
-      "早已是世界級知名導演的馬吉迪，在1997年入圍奧斯卡最佳外語片《天堂的孩子》是影癡們最熟悉的影片之一，他以擅長拍攝兒童演員而著名，導演表示在孩子們的身上，他看到了不容置疑的真實性，不僅容易讓觀眾產生同理心，同時跟這些童星演員合作也能激發他更多的靈感，孩子們的熱情、原創性、想像力和自由使他們能夠參與各種不同的冒險。\n",
-      " \n",
-      "導演坦承在製作每一部作品時，選角絕對是最耗時、最困難也最複雜的程序，這次拍攝《淘寶少年》就花了四個月的時間，歷經超過三千場試鏡才把演員都確定下來，每剔除一個孩子對導演來說都非常煎熬，深怕粉碎了他們的夢想。一旦找到對的演員，導演的工作就幾乎完成了一半，他刻劃出每個角色的深度，就交由他們將自己的天賦和熱情展現在鏡頭前。孩子們在片中有許多即興演出，讓馬吉迪可以完美捕捉他們最純真的一面，有時這些即興創作甚至比照著劇本演出還要更加精彩。\n",
-      "在片中許多主要演員在真實生活中就是童工，像是飾演薩拉的莎蜜拉(Shamila Shizad) 和她弟弟，他們在戲裡戲外都是來自阿富汗的移民，他們一天中一半的時間要去街上工作，剩下時間才去專為童工設立的學校唸書。但是莎蜜拉充滿魅力的演出，在電影中展露的光芒絕對是經驗老道的演員也無法靠演技表現的，因為那完全就是他們從生活經驗汲取的鏡頭能量。另外飾演主角阿里的羅霍拉 (Rouhollah Zamani)更是演技完美詮釋的天才童星，從來不曾演戲的他渾身充滿了原始能量，他的演出總是有超乎預期的表現，他渴望成功的野心就跟角色的個性如出一徹，這也是他能夠脫穎而出的關鍵之一，而他精彩的演出更讓他拿下了威尼斯影展的最佳新演員獎。\n",
-      " \n",
-      "耗時1個月打造挖寶藏地道  為了演員能夠容身及攝影機運動空間 \n",
-      "為求順利完成進行無數次無攝影機排演  地鐵場景挑戰一次到位\n",
-      "在《淘寶少年》中，除了演員之外，另外一個主角就是挖寶藏的地道，劇組耗費心力打造出來的地道和水槽，絕對是電影中最艱鉅的一項任務。因為這條地道裡除了要能夠讓演員活動自如之外，同時也需要足夠的空間架設攝影機，並從不同角度來進行拍攝。因此光是挖掘整個地道的場景，就花了將近一個月的時間才準備完成。\n",
-      " \n",
-      "除了地道外，電影中大部分的場景幾乎是實景拍攝，導演希望能藉此達到如同紀錄片般的寫實感。其中有一場在地鐵站拍攝的實景戲，更因為處於繁忙的交通時刻無法為了拍攝而停止運輸工作，加上許多繁瑣的規定而讓拍攝更加辛苦。為了因應這個狀況，導演只能讓演員們在沒有攝影機拍攝的狀況下不斷地排練，因為場地的限制，即使是情緒緊張高昂的追逐戲，最多也只有兩次機會可以拍攝。還好最後小演員們終於不負眾望帶來最自然又到位的演出，也成為《淘寶少年》中最亮眼的一場戲。\n",
-      " \n",
-      "          \n",
-      "---------------------------\n",
-      "詭老\n",
-      "Old\n",
-      "2021-07-30\n",
-      "懸疑/驚悚\n",
-      "\n",
-      "            獨具遠見的導演奈沙馬蘭將推出一部令人不寒而慄、疑雲重重的全新驚悚片，故事描述一個家庭前往熱帶地帶度假時，發現他們才剛在夏日海灘放鬆了幾個小時，竟然就迅速衰老，在一天內過完他們的一生。\n",
-      " \n",
-      "這部電影豪華的國際化卡司陣容包括金球獎得主蓋爾賈西亞貝納（亞馬遜影集《叢林中的莫札特》）、維琪克雷普（《霓裳魅影》）、魯夫斯席威爾（亞馬遜影集《高堡奇人》）、梁肯（《STAR WARS：原力覺醒》）、妮基阿姆卡伯德（《朱比特崛起》）、艾碧李（HBO影集《逃出絕命村》）、亞倫皮爾（Syfy頻道影集《超人前傳》）、艾力克斯爾沃夫（《宿怨》）、安貝絲戴維茲（《龍紋身的女孩》）、艾莉莎斯坎倫（《她們》）、伊蒙艾略特（《STAR WARS：原力覺醒》）、凱瑟琳查芬特（Showtime影集《婚外情事》）以及湯瑪遜麥肯錫（《兔嘲男孩》）。\n",
-      " \n",
-      "《詭老》一片由Blinding Edge Pictures製作，奈沙馬蘭自編自製自導，他的劇本改編自皮耶奧斯卡李維及弗雷德里克彼得斯著作之圖像小說《沙堡》。這部電影的製片是艾希文拉傑（《異裂》、《分裂》）及馬克賓斯托克（《異裂》、AppleTV+影集《靈異女僕》），執行製片則是史蒂文施奈德。\n",
-      "          \n",
-      "---------------------------\n",
-      "罪之聲\n",
-      "The Voice of Sin\n",
-      "2021-07-30\n",
-      "劇情\n",
-      "懸疑/驚悚\n",
-      "\n",
-      "            ★ 實力派演員小栗旬、「全能才子」星野源首度精彩共演\n",
-      "★ 改編自作家塩田武士以日本昭和真實未破懸案「固力果．森永案」為題材的人氣推理小說\n",
-      "★《現在，很想見你》導演土井裕泰 ×《法醫女王》編劇野木亞紀子打造懸疑震撼劇！\n",
-      "★ 2020日本報知電影獎 最佳作品獎、最佳男主角獎、最佳男配角獎\n",
-      "★ 2020日刊體育電影大獎 最佳作品獎、最佳男主角獎\n",
-      "★ 2020日本電影金像獎 最佳劇本獎、話題演員獎，入選優秀作品、優秀男主角獎、優秀男配角獎、優秀導演獎、優秀劇本獎等10項大獎\n",
-      "★ 經過35年而甦醒的宿命……　　\n",
-      " \n",
-      "在平成時代將邁入尾聲之際，新聞記者阿久津英士（小栗旬 飾）被選入昭和最大未解決事件的特別企畫組，追查30多年前的事件真相，阿久津為了找到所剩的證據，每天不停進行調查。\n",
-      " \n",
-      "在此事件中，犯罪集團在威脅錄音帶裡用了三名孩子的聲音，阿久津對此十分在意。另一方面，在京都經營西裝店的曾根俊也（星野源 飾），在父親的遺物中發現了卡式錄音帶，感到在意的他聽了錄音帶的內容，竟然聽到了自己年幼時的聲音，而這竟與30多年前威脅許多企業、震撼日本的昭和最大未破懸案的歹徒，所用的威脅錄音帶中出現的聲音是一樣的……\n",
-      "          \n",
-      "---------------------------\n",
-      "破碎的瞬間\n",
-      "My Blood & Bones in a flowing Galaxy\n",
-      "2021-07-30\n",
-      "奇幻\n",
-      "劇情\n",
-      "懸疑/驚悚\n",
-      "\n",
-      "            ★2021金馬奇幻影展 口碑好評沸騰\n",
-      "★2020 華沙影展\n",
-      "★2020 塔林黑夜影展\n",
-      "★改編日本人氣作家竹宮悠由子的同名小說，揭開青春的悸動與迷惘\n",
-      "★日本鬼才導演SABU聯手中川大志、石井杏奈、堤真一等人氣演員，再度突破自我風格打造奇幻青春神作，峰迴路轉的劇情走向令人拍案叫絕、口碑好評不斷\n",
-      " \n",
-      "成為「英雄」的他，該如何拯救相信「外星人」的她？\n",
-      " \n",
-      "夢想成為「英雄」的高三男孩，在朝會上看不慣學妹被霸凌而出手相助，保護她似乎成了使命。然而學妹卻表示自己會有這樣的處境，都是「幽浮」在作祟。日本電影不乏大戰幽浮的超人，但現實裡的英雄要怎麼找出外星人？而且應該沒有人比這號學妹更怪吧！隨著他們越走越近，他發現學妹身上總會出現莫名傷痕，而她的家人似乎也有不足為外人道的一面。\n",
-      " \n",
-      "改編自竹宮悠由子的同名小說，鬼才導演SABU聯手新生代明星中川大志、石井杏奈，以及實力派演員堤真一、原田知世，完成這部峰迴路轉，充滿感官娛樂，卻又具備強大藝術感染力的作品。融合校園霸凌、青春純愛、超級英雄、奇幻驚悚等多種類型，前所未見。導演也自信這會是一部「長存在你記憶裡」的電影。\n",
-      " \n",
-      "          \n",
-      "---------------------------\n",
-      "理髮師的男人 經典數位修復\n",
-      "The Hairdresser's Husband\n",
-      "2021-07-30\n",
-      "愛情\n",
-      "\n",
-      "            “答應我一件事，當你不再愛我的那天，不要假裝你還愛我”\n",
-      "安東自幼喜歡音樂和舞蹈，經常隨著阿拉伯音樂起舞，兒時的他還有個不為人知的祕密，他深深愛慕著鎮上理髮店的老闆娘席菲太太，三天兩頭便往理髮店跑，每當席菲太太彎下腰幫他剪髮或洗頭的過程中，她身上那淡淡的洗髮精香氣，以及若有似無的身體接觸，總叫他小鹿亂撞、心癢難耐...於是他立志長大後一定要娶理髮師為妻。\n",
-      " \n",
-      "多年後，安東如願在街角的理髮店遇見了他的女神瑪蒂德。在見到瑪蒂德的第一眼，他便下定決心要與她共度一生。在經歷一連串欲拒還迎、直白示愛，安東終於得償所願抱得美人歸。然而，在幸福美滿的婚姻生活中，瑪蒂德眼裡的悲傷卻日漸加深，在某個風雨交加的夜晚，兩人一如往常地歡愛，完事後瑪蒂德獨自離開了家門，再也沒有回來......\n",
-      " \n",
-      "          \n",
-      "---------------------------\n",
-      "除暴\n",
-      "Caught In Time\n",
-      "2021-07-30\n",
-      "動作\n",
-      "犯罪\n",
-      "\n",
-      "            ★ 超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決\n",
-      "★ 金獎影帝吳彥祖與王千源突破形象，最暴烈震撼的演出，演技狂飆\n",
-      "★ 火暴殘忍的動作場面，犯案與辦案的燒腦劇情，口碑滿滿，大賣20億台幣\n",
-      " \n",
-      "90年代，屢破大案的刑警鍾誠（王千源 飾）受命追捕悍匪集團「老鷹幫」。這群悍匪犯下驚天連環劫案，訓練有素且紀律嚴明，手中更有大量槍枝武器，首領張隼（吳彥祖 飾）還屢次惡意挑釁，矛頭直指鍾誠。\n",
-      " \n",
-      "雙方一次次街頭火拚，警方卻一直無法將老鷹幫捉拿歸案，鍾誠帶領刑警小隊仍咬死不放，更加強訓練對抗悍匪。數年間，警匪上演了多次的緊張刺激的較量，老鷹幫愈加猖獗，警方面臨到巨大時間壓力，但似乎也逐漸掌握到老鷹幫犯案模式，雙方又再次展開殊死對決。\n",
-      " \n",
-      "          \n",
-      "---------------------------\n",
-      "太陽出來之後\n",
-      "Under the Open Sky\n",
-      "2021-07-30\n",
-      "劇情\n",
-      "\n",
-      "            ★ 一個出獄大叔的救贖之路！改編自直木賞獲獎小說《身分帳》\n",
-      "★ 芝加哥國際影展 多倫多國際影展 口碑爆棚推薦\n",
-      "★ 日本影帝 役所廣司 新生代實力派演員 仲野太賀 首度同台逆轉人生\n",
-      "★ 改過自新就有重生的機會？最寫實反映更生人重返社會的迢迢長路\n",
-      "★ 別讓過去陰霾絆倒你 活在當下做好咖 才是人生最大意義\n",
-      " \n",
-      "一名中年的前黑幫成員三上正夫（役所廣司 飾）因謀殺罪入獄13年，出獄後的他為了適應社會、找工作、與人交流及習慣自由之身而苦惱，同時也一心一意尋找在小時候分散的母親。在尋找父母的過程中，他遇到了願意幫助他的人們，也終於在主流社會找到一席之地，然而過程並非一帆風順…。\n",
-      "          \n",
-      "---------------------------\n"
-     ]
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                中文名稱                                  英文名稱        上映日期  \\\n",
+       "0               叢林奇航                         Jungle Cruise  2021-07-30   \n",
+       "1  LIP X LIP享受這世界的方法                 LIP X LIP FILM X LIVE  2021-07-30   \n",
+       "2             小王子公主心                          Petite Fille  2021-07-30   \n",
+       "3               淘寶少年                          Sun Children  2021-07-30   \n",
+       "4                 詭老                                   Old  2021-07-30   \n",
+       "5                罪之聲                      The Voice of Sin  2021-07-30   \n",
+       "6              破碎的瞬間  My Blood & Bones in a flowing Galaxy  2021-07-30   \n",
+       "7      理髮師的男人 經典數位修復             The Hairdresser's Husband  2021-07-30   \n",
+       "8                 除暴                        Caught In Time  2021-07-30   \n",
+       "9             太陽出來之後                    Under the Open Sky  2021-07-30   \n",
+       "\n",
+       "          類型                                                 簡介  \n",
+       "0     動作冒險奇幻  故事描述一位名叫霍頓博士（艾蜜莉布朗 飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻...  \n",
+       "1         動畫  ★日本百萬訂閱品牌VOCALOID樂團HoneyWorks 10週年特別企劃，偶像團體組合「...  \n",
+       "2        紀錄片  ★ 4座最佳紀錄片獎得主   千萬觀眾感動淚推，動人鉅獻！\\r\\n★ 紀錄人類幼小心靈的掙扎...  \n",
+       "3         劇情  ★入選 威尼斯影展競賽片最佳影片\\r\\n★榮獲 威尼斯影展最佳新演員獎\\r\\n★2021 奧...  \n",
+       "4      懸疑/驚悚  獨具遠見的導演奈沙馬蘭將推出一部令人不寒而慄、疑雲重重的全新驚悚片，故事描述一個家庭前往熱帶...  \n",
+       "5    劇情懸疑/驚悚  ★ 實力派演員小栗旬、「全能才子」星野源首度精彩共演\\r\\n★ 改編自作家塩田武士以日本昭和...  \n",
+       "6  奇幻劇情懸疑/驚悚  ★2021金馬奇幻影展 口碑好評沸騰\\r\\n★2020 華沙影展\\r\\n★2020 塔林黑夜...  \n",
+       "7         愛情  “答應我一件事，當你不再愛我的那天，不要假裝你還愛我”\\r\\n安東自幼喜歡音樂和舞蹈，經常隨...  \n",
+       "8       動作犯罪  ★ 超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決\\r\\n★ 金獎影帝吳彥祖...  \n",
+       "9         劇情  ★ 一個出獄大叔的救贖之路！改編自直木賞獲獎小說《身分帳》\\r\\n★ 芝加哥國際影展 多倫多...  "
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>中文名稱</th>\n",
+       "      <th>英文名稱</th>\n",
+       "      <th>上映日期</th>\n",
+       "      <th>類型</th>\n",
+       "      <th>簡介</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>叢林奇航</td>\n",
+       "      <td>Jungle Cruise</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>動作冒險奇幻</td>\n",
+       "      <td>故事描述一位名叫霍頓博士（艾蜜莉布朗 飾演）發現了深藏在亞馬遜裡，有著一顆擁有治癒神力的奇幻...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LIP X LIP享受這世界的方法</td>\n",
+       "      <td>LIP X LIP FILM X LIVE</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>動畫</td>\n",
+       "      <td>★日本百萬訂閱品牌VOCALOID樂團HoneyWorks 10週年特別企劃，偶像團體組合「...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>小王子公主心</td>\n",
+       "      <td>Petite Fille</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>紀錄片</td>\n",
+       "      <td>★ 4座最佳紀錄片獎得主   千萬觀眾感動淚推，動人鉅獻！\\r\\n★ 紀錄人類幼小心靈的掙扎...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>淘寶少年</td>\n",
+       "      <td>Sun Children</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>劇情</td>\n",
+       "      <td>★入選 威尼斯影展競賽片最佳影片\\r\\n★榮獲 威尼斯影展最佳新演員獎\\r\\n★2021 奧...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>詭老</td>\n",
+       "      <td>Old</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>懸疑/驚悚</td>\n",
+       "      <td>獨具遠見的導演奈沙馬蘭將推出一部令人不寒而慄、疑雲重重的全新驚悚片，故事描述一個家庭前往熱帶...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>罪之聲</td>\n",
+       "      <td>The Voice of Sin</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>劇情懸疑/驚悚</td>\n",
+       "      <td>★ 實力派演員小栗旬、「全能才子」星野源首度精彩共演\\r\\n★ 改編自作家塩田武士以日本昭和...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>破碎的瞬間</td>\n",
+       "      <td>My Blood &amp; Bones in a flowing Galaxy</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>奇幻劇情懸疑/驚悚</td>\n",
+       "      <td>★2021金馬奇幻影展 口碑好評沸騰\\r\\n★2020 華沙影展\\r\\n★2020 塔林黑夜...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>理髮師的男人 經典數位修復</td>\n",
+       "      <td>The Hairdresser's Husband</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>愛情</td>\n",
+       "      <td>“答應我一件事，當你不再愛我的那天，不要假裝你還愛我”\\r\\n安東自幼喜歡音樂和舞蹈，經常隨...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>除暴</td>\n",
+       "      <td>Caught In Time</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>動作犯罪</td>\n",
+       "      <td>★ 超級硬派警匪決戰，6年內犯下破萬件搶案的最強悍匪與刑警強力對決\\r\\n★ 金獎影帝吳彥祖...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>太陽出來之後</td>\n",
+       "      <td>Under the Open Sky</td>\n",
+       "      <td>2021-07-30</td>\n",
+       "      <td>劇情</td>\n",
+       "      <td>★ 一個出獄大叔的救贖之路！改編自直木賞獲獎小說《身分帳》\\r\\n★ 芝加哥國際影展 多倫多...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 129
     }
    ],
    "metadata": {}
